force-app/main/default/objects/Supplier_Call_Report__c/Supplier_Call_Report__c.object-meta.xml
<CustomObject>
    <description>Object to describe the result of a call report done by Sales</description>
    <label>Supplier Call Report</label>
    <nameField>
        <displayFormat>CallReport-{0000}</displayFormat>
        <label>Call Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Call Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>