force-app/main/default/objects/Supplier_Call_Report__c/fields/Background_of_promoters_key_personnel__c.field-meta.xml
<CustomField>
    <fullName>Background_of_promoters_key_personnel__c</fullName>
    <label>Background of promoters /key personnel:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>