force-app/main/default/objects/Supplier_Call_Report__c/fields/Buyer_name_1__c.field-meta.xml
<CustomField>
    <fullName>Buyer_name_1__c</fullName>
    <label>Buyer name 1</label>
    <length>75</length>
    <required>true</required>
    <type>Text</type>
</CustomField>