force-app/main/default/objects/Supplier_Call_Report__c/fields/Buyer_name_2__c.field-meta.xml
<CustomField>
    <fullName>Buyer_name_2__c</fullName>
    <label>Buyer name 2</label>
    <length>75</length>
    <type>Text</type>
</CustomField>