force-app/main/default/objects/Supplier_Call_Report__c/fields/Country_of_incorporation_1__c.field-meta.xml
<CustomField>
    <fullName>Country_of_incorporation_1__c</fullName>
    <label>Country of incorporation 1</label>
    <length>75</length>
    <required>true</required>
    <type>Text</type>
</CustomField>