force-app/main/default/objects/Supplier_Call_Report__c/fields/Country_of_incorporation_2__c.field-meta.xml
<CustomField>
    <fullName>Country_of_incorporation_2__c</fullName>
    <label>Country of incorporation 2</label>
    <length>75</length>
    <type>Text</type>
</CustomField>