force-app/main/default/objects/Supplier_Call_Report__c/fields/Country_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Incorporation__c</fullName>
    <label>Country of Incorporation</label>
    <length>75</length>
    <required>true</required>
    <type>Text</type>
</CustomField>