force-app/main/default/objects/Supplier_Call_Report__c/fields/Current_expected_Payment_terms_3__c.field-meta.xml
<CustomField>
    <fullName>Current_expected_Payment_terms_3__c</fullName>
    <label>Current / expected Payment terms 3</label>
    <length>75</length>
    <type>Text</type>
</CustomField>