force-app/main/default/objects/Supplier_Call_Report__c/fields/Current_expected_Payment_terms__c.field-meta.xml
<CustomField>
    <fullName>Current_expected_Payment_terms__c</fullName>
    <label>Current / expected Payment terms 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>