force-app/main/default/objects/Supplier_Call_Report__c/fields/Date_of_establishment_incorporation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_establishment_incorporation__c</fullName>
    <label>Year of establishment / incorporation</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>