force-app/main/default/objects/Supplier_Call_Report__c/fields/Equity__c.field-meta.xml
<CustomField>
    <fullName>Equity__c</fullName>
    <label>Equity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>