force-app/main/default/objects/Supplier_Call_Report__c/fields/INCOterms_FOB_CFR_CIF_Others_3__c.field-meta.xml
<CustomField>
    <fullName>INCOterms_FOB_CFR_CIF_Others_3__c</fullName>
    <label>INCOterms [FOB/CFR/CIF/Others 3</label>
    <length>75</length>
    <type>Text</type>
</CustomField>