force-app/main/default/objects/Supplier_Call_Report__c/fields/Key_export_countries_regions_top_3__c.field-meta.xml
<CustomField>
    <fullName>Key_export_countries_regions_top_3__c</fullName>
    <label>Key export countries / regions: [top 3]</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>