force-app/main/default/objects/Supplier_Call_Report__c/fields/Lead_Trade_partner_1__c.field-meta.xml
<CustomField>
    <fullName>Lead_Trade_partner_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If the lead exist, It will populate the following Data Automatically</inlineHelpText>
    <label>Lead Trade partner 1</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Supplier Call Reports (Lead Trade partner 1)</relationshipLabel>
    <relationshipName>Supplier_Call_Reports1</relationshipName>
    <type>Lookup</type>
</CustomField>