force-app/main/default/objects/Supplier_Call_Report__c/fields/Length_of_relationship_in_years_1__c.field-meta.xml
<CustomField>
    <fullName>Length_of_relationship_in_years_1__c</fullName>
    <label>Length of relationship [in years] 1</label>
    <length>75</length>
    <required>true</required>
    <type>Text</type>
</CustomField>