force-app/main/default/objects/Supplier_Call_Report__c/fields/Length_of_relationship_in_years_2__c.field-meta.xml
<CustomField>
    <fullName>Length_of_relationship_in_years_2__c</fullName>
    <label>Length of relationship [in years] 2</label>
    <length>75</length>
    <type>Text</type>
</CustomField>