force-app/main/default/objects/Supplier_Call_Report__c/fields/Nature_of_activity__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_activity__c</fullName>
    <label>Nature of activity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Trading</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>