force-app/main/default/objects/Supplier_Call_Report__c/fields/Net_profit__c.field-meta.xml
<CustomField>
    <fullName>Net_profit__c</fullName>
    <label>Net profit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>