force-app/main/default/objects/Supplier_Call_Report__c/fields/Other_financing_factoring_facilities__c.field-meta.xml
<CustomField>
    <fullName>Other_financing_factoring_facilities__c</fullName>
    <label>Other financing / factoring facilities:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>