force-app/main/default/objects/Supplier_Call_Report__c/fields/Ownership_structure__c.field-meta.xml
<CustomField>
    <fullName>Ownership_structure__c</fullName>
    <inlineHelpText>[sole proprietorship / partnership / private limited company / public limited company / others]</inlineHelpText>
    <label>Ownership structure</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>sole proprietorship</fullName>
            </value>
            <value>
                <fullName>partnership</fullName>
            </value>
            <value>
                <fullName>private limited company</fullName>
            </value>
            <value>
                <fullName>public limited company</fullName>
            </value>
            <value>
                <fullName>others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>