force-app/main/default/objects/Supplier_Call_Report__c/fields/Related_Company__c.field-meta.xml
<CustomField>
    <fullName>Related_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the related Lead Name</inlineHelpText>
    <label>Related Company Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Call Reports</relationshipLabel>
    <relationshipName>Supplier_Call_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>