force-app/main/default/objects/Supplier_Call_Report__c/fields/Sales_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Sales_Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>If necessary Link to the Sales Opportunity</inlineHelpText>
    <label>Sales Opportunity Related</label>
    <referenceTo>Invoice_Opportunity__c</referenceTo>
    <relationshipLabel>Call Reports</relationshipLabel>
    <relationshipName>Supplier_Call_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>