force-app/main/default/objects/Supplier_Call_Report__c/fields/Sales_turnover__c.field-meta.xml
<CustomField>
    <fullName>Sales_turnover__c</fullName>
    <label>Sales turnover</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>