force-app/main/default/objects/Supplier_Call_Report__c/fields/Supplier_Buyer_Map__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Buyer_Map__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the Supplier Buyer Map if exist</inlineHelpText>
    <label>Supplier Buyer Map</label>
    <referenceTo>Supplier_Buyer_Map__c</referenceTo>
    <relationshipLabel>Supplier Call Reports</relationshipLabel>
    <relationshipName>Supplier_Call_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>