force-app/main/default/objects/Supplier_Call_Report__c/fields/Total_Debt__c.field-meta.xml
<CustomField>
    <fullName>Total_Debt__c</fullName>
    <label>Total Debt</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>