force-app/main/default/objects/Supplier_Call_Report__c/fields/Underlying_goods_2__c.field-meta.xml
<CustomField>
    <fullName>Underlying_goods_2__c</fullName>
    <label>Underlying goods 2</label>
    <length>75</length>
    <type>Text</type>
</CustomField>