force-app/main/default/objects/Supplier_Call_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Opportunity__c</columns>
    <columns>Related_Company__c</columns>
    <columns>Company_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>